Move API from odin-server module to odin-api module